--- a/config/install/pathauto.pattern.contact_triage_form.yml
+++ b/config/install/pathauto.pattern.contact_triage_form.yml
@@ -9,13 +9,13 @@ type: 'canonical_entities:node'
 pattern: 'contact-council/[node:title]'
 selection_criteria:
   ed9122e0-b335-4028-9600-b2b761c305ca:
-    id: node_type
-    bundles:
-      contact_triage_form: contact_triage_form
+    id: 'entity_bundle:node'
     negate: false
+    uuid: ed9122e0-b335-4028-9600-b2b761c305ca
     context_mapping:
       node: node
-    uuid: ed9122e0-b335-4028-9600-b2b761c305ca
+    bundles:
+      contact_triage_form: contact_triage_form
 selection_logic: and
 weight: -7
 relationships: {  }
